fix overflow footer

--- a/web/css/header.less
+++ b/web/css/header.less
@@ -141,6 +141,10 @@
   .main-nav__last-item a {
     border: none;
   }
+
+  &--footer {
+    overflow: auto;
+  }
 }
 
 @media (max-height: 638px) {
@@ -161,6 +165,10 @@
       overflow: scroll;
       height: auto;
       max-width: 400px;
+    }
+
+    &--footer {
+      overflow: auto;
     }
   }
 }
